--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,4 @@
-*{
+/* *{
   box-sizing: border-box;
     padding: 10px;
     margin: 10px;
@@ -43,7 +43,7 @@ body{
   padding: 14px;
   flex-direction: column;
   background-color: blueviolet;
-}
+} */
 
 .picofme{
   border: 1px solid #ddd;
