--- a/assets/style.css
+++ b/assets/style.css
@@ -49,9 +49,11 @@ body{
   border: 1px solid #ddd;
   border-radius: 4px;
   padding: 5px;
-  width: 150px;
+  width: 600px;
   align-items: flex-end;
   align-content: flex-end;
+  max-width: 200%;
+  height:100%;
 
 }
 
